--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lenis": "^1.3.17",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
